agregue precios y cambio de responsive producto

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -49,22 +49,22 @@
     <main class="main">
         <section class="main_productos">
            <div class="prod">
-            <img src="../images/productos/joya1.jfif" alt="producto 1" class="img_prod"><p class="price">Precio</p>
+            <img src="../images/productos/joya1.jfif" alt="producto 1" class="img_prod"><p class="price">$1255</p>
            </div>
            <div class="prod">
-            <img src="../images/productos/joya2.jfif" alt="prducto 2" class="img_prod"><p class="price">Precio</p>
+            <img src="../images/productos/joya2.jfif" alt="prducto 2" class="img_prod"><p class="price">$823</p>
            </div>
            <div class="prod">
-            <img src="../images/productos/joya3.jfif" alt="producto 3" class="img_prod"><p class="price">Precio</p>
+            <img src="../images/productos/joya3.jfif" alt="producto 3" class="img_prod"><p class="price">$1000</p>
            </div>
            <div class="prod">
-            <img src="../images/productos/joya4.jfif" alt="producto 4" class="img_prod"><p class="price">Precio</p>
+            <img src="../images/productos/joya4.jfif" alt="producto 4" class="img_prod"><p class="price">$2351</p>
            </div>
            <div class="prod">
-            <img src="../images/productos/joya4.jfif" alt="producto 5" class="img_prod"><p class="price">Precio</p>
+            <img src="../images/productos/joya4.jfif" alt="producto 5" class="img_prod"><p class="price">$986</p>
            </div>
            <div class="prod">
-            <img src="../images/productos/joya1.jfif" alt="producto 6" class="img_prod"><p class="price">Precio</p>
+            <img src="../images/productos/joya1.jfif" alt="producto 6" class="img_prod"><p class="price">$999</p>
            </div>
         </section>
         <div class="main_text">
